Fix: lack of support for gap property in safari

--- a/styles/layout/header.scss
+++ b/styles/layout/header.scss
@@ -44,9 +44,9 @@
   }
 
   .navigation__list {
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    place-items: center;
     gap: 0 clamp(4rem,1rem + .47vw,1.33rem);
     margin: 0;
     @include media('<phone') {
